--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         
     </div>
     <br>
-    <p> Contact: <a href="vineetnewar7@gmail.com"> Gmail id</a></p>
+    <p> Contact: <a href="mailto:vineetnewar7@gmail.com">Gmail ID</a></p>
     
 
 
